# tauri-boilerplate

./: .editorconfig  README.md  package.json  tsconfig.json  vite.config.js
.github/workflows/: build.yml
src/: app.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/common/constants/: navigation.ts
src/common/helpers/: index.ts
src/config/theme/: theme.ts
src/config/theme/chakra/: index.ts
src/pages/: ZustandPage.tsx
src/pages/WelcomePage/: WelcomePage.tsx
src/stores/: useAsteroidStore.ts
